[gd_scene load_steps=22 format=2]

[ext_resource path="res://models/Bezergreen.material" type="Material" id=1]
[ext_resource path="res://models/hand_palm.obj" type="ArrayMesh" id=2]
[ext_resource path="res://cue_v_obj.gd" type="Script" id=3]
[ext_resource path="res://audio/dull_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://TargetTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/black.material" type="Material" id=6]
[ext_resource path="res://models/green_ball_mat.material" type="Material" id=7]
[ext_resource path="res://Hold_Ring.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/super_white.material" type="Material" id=9]
[ext_resource path="res://models/RainbowParticle.tres" type="ArrayMesh" id=10]
[ext_resource path="res://materials/TrailMaterial.tres" type="Material" id=11]

[sub_resource type="Animation" id=1]
length = 0.8
tracks/0/type = "transform"
tracks/0/path = NodePath("../Circle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Circle:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Circle:rotation_degrees:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Circle:rotation_degrees:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.15, 123.744, 335.251, -0.06, -93.312, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.401 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Circle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/5/type = "transform"
tracks/5/path = NodePath("../Circle")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = PoolRealArray(  )
tracks/6/type = "value"
tracks/6/path = NodePath(".:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.04, 0.04, 0.04 ), Vector3( 0.0100002, 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Circle:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Circle:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Circle:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Circle:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../Circle:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Circle:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Circle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CylinderMesh" id=3]
top_radius = 1.8
bottom_radius = 1.8
height = 0.1

[sub_resource type="CylinderMesh" id=4]
top_radius = 2.0
bottom_radius = 2.0
height = 0.1

[sub_resource type="SphereMesh" id=5]
radius = 0.1
height = 0.4
radial_segments = 6
rings = 3

[sub_resource type="CylinderShape" id=6]
radius = 0.12
height = 0.09

[sub_resource type="CubeMesh" id=7]
material = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.690196, 0, 0, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.02, 0.02, 0.02 )

[sub_resource type="SphereMesh" id=10]
radius = 0.01
height = 0.02
radial_segments = 6
rings = 3

[node name="StaticBody" type="StaticBody"]
script = ExtResource( 3 )
cue_left = false

[node name="Circle" type="MeshInstance" parent="."]
transform = Transform( 0.04, 0, 0, 0, -1.74846e-09, -0.04, 0, 0.04, -1.74846e-09, 0, 0, 0 )

[node name="TargetTimer" parent="Circle" instance=ExtResource( 5 )]
transform = Transform( 20, 0, 0, 0, -4.37114e-07, 10, 0, -20, -8.74228e-07, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Circle"]
anims/explode = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Circle"]
transform = Transform( 3, 0, 0, 0, 3, 3.57628e-07, 0, -3.57628e-07, 3, 0.064494, -0.399911, -0.429825 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="Backdrop" type="MeshInstance" parent="Circle"]
transform = Transform( 1, 0, 0, 0, 1, -8.88178e-15, 0, 3.55271e-14, 1, 0, -0.165848, 1.44989e-08 )
mesh = SubResource( 3 )
material/0 = ExtResource( 6 )

[node name="Backdrop2" type="MeshInstance" parent="Circle"]
transform = Transform( 1, 0, 0, 0, 1, -3.55271e-15, 0, 2.13163e-14, 1, 0, -0.3, 3.55271e-15 )
mesh = SubResource( 4 )
material/0 = ExtResource( 7 )

[node name="hold" type="Spatial" parent="Circle"]
transform = Transform( 1, 0, 0, 0, -2.14369e-07, -0.76, 0, 1.31579, -1.2382e-07, 0, 0, 0 )

[node name="hold_indicator" type="MeshInstance" parent="Circle/hold"]
transform = Transform( 1, 0, 0, 0, 1, -2.84217e-14, 0, 0, 1, 0, -2.01948, -2.19544e-07 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="hold_ring" parent="Circle" instance=ExtResource( 8 )]
transform = Transform( 2.2, 0, 0, 0, 2.2, 0, 0, 0, 2.2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, -4.37114e-08, -0.6, 0, 1, -2.62268e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="sprinkle" type="CPUParticles" parent="."]
cast_shadow = 0
emitting = false
amount = 16
one_shot = true
speed_scale = 2.0
mesh = ExtResource( 10 )
direction = Vector3( 0, 0, 1 )
spread = 90.0
gravity = Vector3( 0, 0, -2 )
initial_velocity = 0.5
initial_velocity_random = 0.59
linear_accel = 3.0
scale_amount = 0.02
__meta__ = {
"_editor_description_": ""
}

[node name="trail" type="CPUParticles" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -0.0813418 )
cast_shadow = 0
emitting = false
amount = 16
speed_scale = 4.0
explosiveness = 0.1
lifetime_randomness = 1.0
mesh = SubResource( 7 )
flag_rotate_y = true
direction = Vector3( 0, 0, -1 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.4
initial_velocity_random = 0.1
angular_velocity = 10.0
angle = 45.0
scale_amount = 0.02
__meta__ = {
"_editor_description_": ""
}

[node name="sprinkle_opponent" type="CPUParticles" parent="."]
cast_shadow = 0
emitting = false
amount = 16
one_shot = true
speed_scale = 2.0
mesh = SubResource( 9 )
direction = Vector3( 0, 0, 1 )
spread = 90.0
gravity = Vector3( 0, 0, -2 )
initial_velocity = 0.5
initial_velocity_random = 0.59
linear_accel = 3.0
__meta__ = {
"_editor_description_": ""
}

[node name="right" type="Spatial" parent="."]
transform = Transform( 0.03, 0, 0, 0, 0.03, 1.88745e-09, 0, -8.4639e-09, 0.05, 0, 0, 0 )

[node name="dot" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 10 )
material/0 = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.2

[connection signal="animation_finished" from="Circle/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
